# platform.upstream.libdrm

./: .gbs.conf  COPYING  Makefile.am  configure.ac  configure.ac.rej  libdrm-2.4.39.tar.bz2.delta  libdrm-2.4.39.tar.bz2.id  libdrm-2.4.45.tar.bz2.delta  libdrm-2.4.45.tar.bz2.id  libdrm.pc.in  project.config  xf86drm.c  xf86drm.h  xf86drmMode.c  xf86drmMode.h
exynos/: Makefile.am  exynos_drm.c  exynos_drm.h  exynos_fimg2d.c
freedreno/: Makefile.am
include/drm/: Makefile.am  drm_mode.h  vigs_drm.h
intel/: Makefile.am
libkms/: Makefile.am  exynos.c  slp.c
loader/: loader.c  loader.h
nouveau/: Makefile.am
omap/: Makefile.am
packaging/: baselibs.conf  libdrm.changes  libdrm.spec
radeon/: Makefile.am
slp/: Makefile.am  drm_slp_bufmgr.c  drm_slp_bufmgr.h  libdrm_slp.pc.in  list.h
sprd/: Makefile.am  libdrm_sprd.pc.in  sprd_drm.c  sprd_drm.h  sprd_drmif.h  sprdfb.h
tests/: Makefile.am  planetest.tar
tests/exynos/: exynos_fimg2d_test.c
tests/ipptest/: Makefile.am  buffers.c  buffers.h  fimc.c  fimc.h  fimctest.c  fimctest.h  gem.c  gem.h  util.c  util.h
tests/modeprint/: Makefile.am  modeprint.c
tests/modetest/: modetest.c
tests/rottest/: Makefile.am  gem.c  gem.h  rotator.c  rotator.h  rottest.c  rottest.h  util.c  util.h
vigs/: Makefile.am  libdrm_vigs.pc.in  vigs.c  vigs.h
